--- a/hotel management System/index.html
+++ b/hotel management System/index.html
@@ -21,7 +21,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar bg-blue-800 text-white w-64 py-4 px-6 flex flex-col">
             <div class="flex items-center justify-between mb-8">
-                <h1 class="text-2xl font-bold">HotelEase</h1>
+                <h1 class="text-2xl font-bold">Ahinfie Hotel</h1>
                 <button id="collapse-btn" class="md:hidden">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -35,43 +35,43 @@
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="reservations.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-calendar-check mr-3"></i>
                             <span>Reservations</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="guest.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-users mr-3"></i>
                             <span>Guests</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="rooms.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-door-closed mr-3"></i>
                             <span>Rooms</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="services.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-concierge-bell mr-3"></i>
                             <span>Services</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="billing.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-file-invoice-dollar mr-3"></i>
                             <span>Billing</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="reports.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-chart-line mr-3"></i>
                             <span>Reports</span>
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="settings.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-cog mr-3"></i>
                             <span>Settings</span>
                         </a>
@@ -80,9 +80,9 @@
             </nav>
             <div class="mt-auto">
                 <div class="flex items-center py-2 px-4">
-                    <img src="/api/placeholder/40/40" alt="Admin" class="rounded-full h-10 w-10">
+                    <img src="images.png" alt="Admin" class="rounded-full h-10 w-10">
                     <div class="ml-3">
-                        <p class="font-medium">John Doe</p>
+                        <p class="font-medium">Antepim Awuah Vincent</p>
                         <p class="text-sm text-blue-200">Admin</p>
                     </div>
                 </div>
