--- a/hotel management System/reservsation.html
+++ b/hotel management System/reservsation.html
@@ -22,7 +22,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar bg-blue-800 text-white w-64 py-4 px-6 flex flex-col">
             <div class="flex items-center justify-between mb-8">
-                <h1 class="text-2xl font-bold">HotelEase</h1>
+                <h1 class="text-2xl font-bold">Ahinfie Hotel</h1>
                 <button id="collapse-btn" class="md:hidden">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -42,7 +42,7 @@
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="guests.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
+                        <a href="guest.html" class="flex items-center py-2 px-4 hover:bg-blue-700 rounded">
                             <i class="fas fa-users mr-3"></i>
                             <span>Guests</span>
                         </a>
@@ -81,9 +81,9 @@
             </nav>
             <div class="mt-auto">
                 <div class="flex items-center py-2 px-4">
-                    <img src="/api/placeholder/40/40" alt="Admin" class="rounded-full h-10 w-10">
+                    <img src="images.png" alt="Admin" class="rounded-full h-10 w-10">
                     <div class="ml-3">
-                        <p class="font-medium">John Doe</p>
+                        <p class="font-medium">Antepim Awuah Vincent</p>
                         <p class="text-sm text-blue-200">Admin</p>
                     </div>
                 </div>
