--- a/hotel management System/reservsation.html
+++ b/hotel management System/reservsation.html
@@ -22,7 +22,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar bg-blue-800 text-white w-64 py-4 px-6 flex flex-col">
             <div class="flex items-center justify-between mb-8">
-                <h1 class="text-2xl font-bold">Ahinfie Hotel</h1>
+                <h1 class="text-2xl font-bold">AKWAABA HOTEL</h1>
                 <button id="collapse-btn" class="md:hidden">
                     <i class="fas fa-bars"></i>
                 </button>
