--- a/hotel management System/billing.html
+++ b/hotel management System/billing.html
@@ -272,7 +272,7 @@
                                     <td class="px-4 py-3 font-medium">#INV-001</td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Emma Wilson</p>
                                                 <p class="text-xs text-gray-500">emma@example.com</p>
@@ -303,7 +303,7 @@
                                     <td class="px-4 py-3 font-medium">#INV-002</td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Michael Johnson</p>
                                                 <p class="text-xs text-gray-500">michael@example.com</p>
@@ -334,7 +334,7 @@
                                     <td class="px-4 py-3 font-medium">#INV-003</td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Sarah Adams</p>
                                                 <p class="text-xs text-gray-500">sarah@example.com</p>
@@ -365,7 +365,7 @@
                                     <td class="px-4 py-3 font-medium">#INV-004</td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">David Miller</p>
                                                 <p class="text-xs text-gray-500">david@example.com</p>
