--- a/hotel management System/guest.html
+++ b/hotel management System/guest.html
@@ -216,7 +216,7 @@
                                 <tr class="border-b hover:bg-gray-50">
                                     <td class="px-6 py-4">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/40/40" alt="Guest" class="h-10 w-10 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-10 w-10 rounded-full">
                                             <div class="ml-4">
                                                 <p class="font-medium text-gray-900">Emma Wilson</p>
                                                 <p class="text-sm text-gray-500">ID: #G001</p>
@@ -257,7 +257,7 @@
                                 <tr class="border-b hover:bg-gray-50">
                                     <td class="px-6 py-4">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/40/40" alt="Guest" class="h-10 w-10 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-10 w-10 rounded-full">
                                             <div class="ml-4">
                                                 <p class="font-medium text-gray-900">Michael Johnson</p>
                                                 <p class="text-sm text-gray-500">ID: #G002</p>
@@ -298,7 +298,7 @@
                                 <tr class="border-b hover:bg-gray-50">
                                     <td class="px-6 py-4">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/40/40" alt="Guest" class="h-10 w-10 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-10 w-10 rounded-full">
                                             <div class="ml-4">
                                                 <p class="font-medium text-gray-900">Sarah Adams</p>
                                                 <p class="text-sm text-gray-500">ID: #G003</p>
@@ -339,7 +339,7 @@
                                 <tr class="border-b hover:bg-gray-50">
                                     <td class="px-6 py-4">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/40/40" alt="Guest" class="h-10 w-10 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-10 w-10 rounded-full">
                                             <div class="ml-4">
                                                 <p class="font-medium text-gray-900">David Miller</p>
                                                 <p class="text-sm text-gray-500">ID: #G004</p>
