--- a/hotel management System/index.html
+++ b/hotel management System/index.html
@@ -225,7 +225,7 @@
                                     <tr class="border-b hover:bg-gray-50">
                                         <td class="px-4 py-3">
                                             <div class="flex items-center">
-                                                <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                                <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                                 <div class="ml-3">
                                                     <p class="font-medium">Emma Wilson</p>
                                                     <p class="text-xs text-gray-500">emma@example.com</p>
@@ -242,7 +242,7 @@
                                     <tr class="border-b hover:bg-gray-50">
                                         <td class="px-4 py-3">
                                             <div class="flex items-center">
-                                                <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                                <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                                 <div class="ml-3">
                                                     <p class="font-medium">Michael Johnson</p>
                                                     <p class="text-xs text-gray-500">michael@example.com</p>
@@ -259,7 +259,7 @@
                                     <tr class="border-b hover:bg-gray-50">
                                         <td class="px-4 py-3">
                                             <div class="flex items-center">
-                                                <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                                <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                                 <div class="ml-3">
                                                     <p class="font-medium">Sarah Adams</p>
                                                     <p class="text-xs text-gray-500">sarah@example.com</p>
@@ -276,7 +276,7 @@
                                     <tr class="hover:bg-gray-50">
                                         <td class="px-4 py-3">
                                             <div class="flex items-center">
-                                                <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                                <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                                 <div class="ml-3">
                                                     <p class="font-medium">David Miller</p>
                                                     <p class="text-xs text-gray-500">david@example.com</p>
