--- a/hotel management System/reservsation.html
+++ b/hotel management System/reservsation.html
@@ -227,7 +227,7 @@
                                     </td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Emma Wilson</p>
                                                 <p class="text-xs text-gray-500">emma@example.com</p>
@@ -281,7 +281,7 @@
                                     </td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Michael Johnson</p>
                                                 <p class="text-xs text-gray-500">michael@example.com</p>
@@ -335,7 +335,7 @@
                                     </td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Sarah Adams</p>
                                                 <p class="text-xs text-gray-500">sarah@example.com</p>
@@ -389,7 +389,7 @@
                                     </td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">David Miller</p>
                                                 <p class="text-xs text-gray-500">david@example.com</p>
@@ -443,7 +443,7 @@
                                     </td>
                                     <td class="px-4 py-3">
                                         <div class="flex items-center">
-                                            <img src="/api/placeholder/32/32" alt="Guest" class="h-8 w-8 rounded-full">
+                                            <img src="images.png" alt="Guest" class="h-8 w-8 rounded-full">
                                             <div class="ml-3">
                                                 <p class="font-medium">Jennifer Lopez</p>
                                                 <p class="text-xs text-gray-500">jennifer@example.com</p>
