--- a/hotel management System/dashboard.html
+++ b/hotel management System/dashboard.html
@@ -610,26 +610,26 @@
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <h1><i class="fas fa-hotel"></i> HotelMS</h1>
+                <h1> AKWAABA HOTEL</h1>
             </div>
             
             <nav>
                 <ul>
-                    <li><a href="#" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                    <li><a href="#"><i class="fas fa-calendar-check"></i> Reservations</a></li>
-                    <li><a href="#"><i class="fas fa-users"></i> Guests</a></li>
-                    <li><a href="#"><i class="fas fa-bed"></i> Rooms</a></li>
-                    <li><a href="#"><i class="fas fa-concierge-bell"></i> Services</a></li>
-                    <li><a href="#"><i class="fas fa-chart-bar"></i> Reports</a></li>
-                    <li><a href="#"><i class="fas fa-money-bill-wave"></i> Billing</a></li>
-                    <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
+                    <li><a href="dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                    <li><a href="reservations.html"><i class="fas fa-calendar-check"></i> Reservations</a></li>
+                    <li><a href="guest.html"><i class="fas fa-users"></i> Guests</a></li>
+                    <li><a href="rooms.html"><i class="fas fa-bed"></i> Rooms</a></li>
+                    <li><a href="services.html"><i class="fas fa-concierge-bell"></i> Services</a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> Reports</a></li>
+                    <li><a href="billing.html"><i class="fas fa-money-bill-wave"></i> Billing</a></li>
+                    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                 </ul>
             </nav>
             
             <div class="sidebar-footer">
-                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=40&h=40&fit=crop&crop=face" alt="User Avatar">
+                <img src="images.png" alt="User Avatar">
                 <div class="user-info">
-                    <h4>John Manager</h4>
+                    <h4>MR ANTEPIM</h4>
                     <p>Hotel Manager</p>
                 </div>
             </div>
